[P4ADEV-2100] Code Review
