# src/main/java/it/gov/pagopa/pu/processecexutions/dto/ExportFileRequestDTO.java
@@ -1,6 +1,7 @@
 package it.gov.pagopa.pu.processecexutions.dto;
 
 import it.gov.pagopa.pu.processecexutions.enums.ExportFlowFileType;
+import it.gov.pagopa.pu.processecexutions.model.exportfile.ExportFileFilter;
 import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -11,9 +12,11 @@ import lombok.NoArgsConstructor;
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
-public class ExportFileRequestDTO {
+public class ExportFileRequestDTO <T extends ExportFileFilter> {
   @NotNull
   private Long organizationId;
   @NotNull
   private ExportFlowFileType flowFileType;
+  @NotNull
+  private T filterFields;
 }
